If a work only have the title, the trash can wasnt visible, so, I added some bottom margin between each work to prevent this to happen

--- a/orcid-web/src/main/webapp/static/css/orcid.css
+++ b/orcid-web/src/main/webapp/static/css/orcid.css
@@ -2232,3 +2232,11 @@ header overrides
      margin: 0;
      line-height: 1.1em;
 }
+
+.bottom-margin-small {
+	margin-bottom: 15px;
+}
+
+.bottom-margin-medium {
+	margin-bottom: 25px;
+}
